--- a/style.css
+++ b/style.css
@@ -1,7 +1,123 @@
-@charset "UTF-8";
+@media  (min-width:330px) and (max-width:530px){
+    body{
+        height: 1242px;
+       
+    }
+    .astronaut{
+        width: 430px;
+        height: 679px;
+     
+    
+    }
+    .astronaut img{
+       
+        width: 364px;
+        height: 370px;
+        
+
+        font-family: 'Mulish';
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 40px;
+        text-align: center;
+
+       
+    }
+    .txt h1{
+        position: absolute;
+        left: 55px;
+        color: #B52184;
+        top: 387px;
+        left: 55px;
+
+        font-family: 'Mulish';
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 40px;
+    }
+    .txt p{
+        width: 310px;
+        height: 14px;
+        top: 432px;
+        left: 53px;
+
+        position: absolute;
+        font-family: 'Mulish';
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 25px;
+
+    color: #312D64;
+    }
+    .rectagem img{
+        width: 58px;
+        height: 105px;
+        top: 500px;
+        left: 186px;
+        position: absolute;
+    }
+    .vector img{
+        width: 29px;
+        height: 45px;
+        top: 530px;
+        left: 200px;
+        position: absolute;
+    }
+    #cards{
+        margin: auto;
+        width: 430px;
+        height: 1242px;
+        border: 1px solid;
+        background: linear-gradient(96.21deg, #343193 0%, #302C63 99.68%);
+       
+    }
+    #cards .card{
+        width: 352px;
+        height: 337px;
+        
+        margin-left: 32px;
+        margin-top: 52px;
+
+        background: #FFFFFF;
+        box-shadow: 0px 3.31077px 13.2431px rgba(0, 0, 0, 0.25);
+        border-radius: 19px;
+
+    }
+    #cards .card img{
+        margin-top: 15px;
+        margin-left: 26px;
+    }
+    .card h3{
+        font-family: 'Mulish';
+    
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 40px;
+        margin-top: 0;
+        margin-left: 32px;
+        color: #B52184;
+    }
+    
+    .card p{
+        width: 265px;
+        height: 131px;
+        margin-left: 26px;
+        color: #312D64;
+        font-family: 'Mulish';
+        font-weight: 600;
+        font-size: 15px;
+      text-align: center;
+     
+     
+    }
+    .stars{
+        display: none;
+    }
+}
 
 
 
+@media (min-width:980px) and (max-width:1440px){
 *{
     margin: 0;
     padding: 0;
@@ -71,10 +187,9 @@ body{
     left: 123px;
 }
 #cards{
-    
-   display: grid;
+    display: grid;
     grid-template-areas: "A B C";
-    
+
     width:100%;
     height: 100%;
     padding: 5.3rem 3.9rem 5.5rem;
@@ -86,7 +201,6 @@ body{
 /* card moon*/
 
 #cards .card{
-  
     background: white;
     padding: 2.6rem;
     border-radius: 2rem;
@@ -218,12 +332,14 @@ form{
     border: 1.5px solid #312D64;
     border-radius: 16px;
  }
- .stars img{
+ .stars {
     position: absolute;
     width: 644px;
     height: 612px;
     margin-left: 796px;
     top:1654px;
+    display: block;
+    
  }
  button{
     display: flex;
@@ -283,7 +399,7 @@ footer{
 }
 
 
-
+}
 
 
 
